# training_from_scratch

./: README.md  pyproject.toml
round2_no_llm/: README.md
round2_no_llm/scratch_transformer/: __init__.py  attention.py  config.py  generate.py  mlp.py  model.py  norm.py  rope.py  tokenizer.py  train.py
round3_training_lab/: README.md  conftest.py
round3_training_lab/tests/: test_checkpoint.py  test_data.py  test_metrics.py  test_optim.py  test_sampling.py  test_schedule.py
round3_training_lab/training_lab/: __init__.py  checkpoint.py  data.py  metrics.py  optim.py  sampling.py  schedule.py
src/scratch_transformer/: __init__.py  attention.py  config.py  generate.py  mlp.py  model.py  norm.py  rope.py  tokenizer.py  train.py
tests/: conftest.py  test_attention.py  test_generate.py  test_kv_cache.py  test_mlp.py  test_norm.py  test_project_structure.py  test_rope.py  test_todo_contracts.py  test_tokenizer_decode.py  test_tokenizer_encode.py  test_tokenizer_save_load.py  test_tokenizer_train.py  test_train.py  test_transformer_block.py  test_transformer_lm.py
